--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,4 +40,5 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    compile 'com.google.android.exoplayer:exoplayer:2.11.3'
 }
